--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
+    "openai": "^6.1.0",
     "paypal-rest-sdk": "^1.8.1",
     "smartsheet": "^4.2.0",
     "socket.io": "^4.8.1",
