--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.803.0",
     "@aws-sdk/lib-storage": "^3.803.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@types/winston": "^2.4.4",
     "apple-signin-auth": "^1.7.8",
     "aws-sdk": "^2.1692.0",
@@ -64,6 +65,7 @@
     "@types/multer-s3": "^3.0.3",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/paypal-rest-sdk": "^1.7.9",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
